--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,9 @@ description = ""
 authors = ["TonyG <tonyzgao@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "3.10"
 ipykernel = "^6.5.1"
+numpy = "^1.21.4"
 
 [tool.poetry.dev-dependencies]
 
