--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["TonyG <tonyzgao@gmail.com>"]
 python = "3.10"
 ipykernel = "^6.5.1"
 numpy = "^1.21.4"
+networkx = "^2.6.3"
+matplotlib = "^3.5.1"
 
 [tool.poetry.dev-dependencies]
 
