--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ ipykernel = "^6.5.1"
 numpy = "^1.21.4"
 networkx = "^2.6.3"
 matplotlib = "^3.5.1"
+scipy = "^1.7.3"
 
 [tool.poetry.dev-dependencies]
 
