--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ numpy = "^1.21.4"
 networkx = "^2.6.3"
 matplotlib = "^3.5.1"
 scipy = "^1.7.3"
+sortedcollections = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
 
