--- a/2022/pyproject.toml
+++ b/2022/pyproject.toml
@@ -10,6 +10,7 @@ numpy = "^1.23.5"
 ipykernel = "^6.18.0"
 
 [tool.poetry.dev-dependencies]
+notebook = "^6.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
