--- a/2022/pyproject.toml
+++ b/2022/pyproject.toml
@@ -10,6 +10,7 @@ numpy = "^1.23.5"
 ipykernel = "^6.18.0"
 sortedcontainers = "^2.4.0"
 intervaltree = "^3.1.0"
+scipy = "^1.9.3"
 
 [tool.poetry.dev-dependencies]
 notebook = "^6.5.2"
