--- a/2022/pyproject.toml
+++ b/2022/pyproject.toml
@@ -11,6 +11,8 @@ ipykernel = "^6.18.0"
 sortedcontainers = "^2.4.0"
 intervaltree = "^3.1.0"
 scipy = "^1.9.3"
+networkx = "^2.8.8"
+matplotlib = "^3.6.2"
 
 [tool.poetry.dev-dependencies]
 notebook = "^6.5.2"
