--- a/2022/pyproject.toml
+++ b/2022/pyproject.toml
@@ -13,6 +13,7 @@ intervaltree = "^3.1.0"
 scipy = "^1.9.3"
 networkx = "^2.8.8"
 matplotlib = "^3.6.2"
+ortools = "^9.5.2237"
 
 [tool.poetry.dev-dependencies]
 notebook = "^6.5.2"
