--- a/2023/pyproject.toml
+++ b/2023/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "ipykernel>=6.26.0",
     "numpy>=1.26.1",
+    "intervaltree>=3.1.0",
 ]
 requires-python = ">=3.12,<3.13"
 readme = "README.md"
