--- a/2023/pyproject.toml
+++ b/2023/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "ipykernel>=6.26.0",
     "numpy>=1.26.1",
     "intervaltree>=3.1.0",
+    "scipy>=1.11.4",
 ]
 requires-python = ">=3.12,<3.13"
 readme = "README.md"
