--- a/2023/pyproject.toml
+++ b/2023/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "numpy>=1.26.1",
     "intervaltree>=3.1.0",
     "scipy>=1.11.4",
+    "modint>=0.4.0",
 ]
 requires-python = ">=3.12,<3.13"
 readme = "README.md"
