--- a/2023/pyproject.toml
+++ b/2023/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "intervaltree>=3.1.0",
     "scipy>=1.11.4",
     "modint>=0.4.0",
+    "networkx>=3.2.1",
+    "matplotlib>=3.8.2",
 ]
 requires-python = ">=3.12,<3.13"
 readme = "README.md"
