--- a/2024/pyproject.toml
+++ b/2024/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "regex>=2024.11.6",
+]
 
 [dependency-groups]
 dev = [
