--- a/2024/pyproject.toml
+++ b/2024/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "ipykernel>=6.29.5",
     "regex>=2024.11.6",
+    "z3-solver>=4.13.3.0",
 ]
 
 [dependency-groups]
