--- a/2024/pyproject.toml
+++ b/2024/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "ipykernel>=6.29.5",
     "regex>=2024.11.6",
+    "scipy>=1.14.1",
     "z3-solver>=4.13.3.0",
 ]
 
