--- a/2025/pyproject.toml
+++ b/2025/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "intervaltree>=3.1.0",
     "ipykernel>=7.1.0",
     "networkx>=3.6",
     "numpy>=2.3.5",
