--- a/2025/pyproject.toml
+++ b/2025/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.14"
 dependencies = [
     "intervaltree>=3.1.0",
     "ipykernel>=7.1.0",
+    "matplotlib>=3.10.7",
     "networkx>=3.6",
     "numpy>=2.3.5",
     "pip>=25.3",
